<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blood pressure diary</string>
    <string name="app_email" translatable="false">mobsofmaster@gmail.com</string>
    <string name="delete_profile">Delete profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="add_profile">Add profile</string>
    <string name="profile_added">Profile was added</string>
    <string name="profile_deleted">Profile was deleted</string>
    <string name="profile_data">Profile data</string>
    <string name="profile_list">Profile list</string>
    <string name="profile">Profile</string>
    <string name="email_default">Get from account</string>
    <string name="email_typing">Print by yourself</string>
    <string name="email_print">Enter email</string>
    <string name="action_settings">Settings</string>
    <string name="add_record">Add record</string>
    <string name="delete_notif">Delete notification</string>
    <string name="delete_notif_all">Delete all</string>
    <string name="edit_record">Edit record</string>
    <string name="delete_record">Delete record</string>
    <string name="delete_all_records">Delete all records</string>
    <string name="edit_notif">Edit notification</string>
    <string name="btnSave">Save</string>
    <string name="exit">Exit</string>
    <string name="save_data">Save data?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="saved">Saved</string>
    <string name="save">Save</string>
    <string name="deleted">Deleted</string>
    <string name="new_name">New name</string>
    <string name="current_name">Your name</string>
    <string name="add_name">Add name</string>
    <string name="added">Added</string>
    <string name="add">Add</string>
    <string name="notif_added">Notification was added</string>
    <string name="notif_changed">Notification was changed</string>
    <string name="notif_deleted">Notification was deleted</string>
    <string name="notif_all_deleted">All notifications are deleted</string>
    <string name="record_added">Record was added</string>
    <string name="record_changed">Record was changed</string>
    <string name="record_deleted">Record was deleted</string>
    <string name="record_all_deleted">All records are deleted</string>
    <string name="high_pressure">Sys pressure</string>
    <string name="low_pressure">Dias pressure</string>
    <string name="pulse">Pulse</string>
    <string name="statistics">Statistics</string>
    <string name="programm_info">Programm info</string>
    <string name="addStat">Add statistics</string>
    <string name="incorrect_name">Enter your name</string>
    <string name="incorrect_email">Enter correct email address</string>
    <string name="correct_notif">Enter your notification</string>
    <string name="save_on_email">Pass by mail</string>
    <string name="save_on_SD">Statistic was saved in folder \"Pressure\"</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="graph">Graph</string>
    <string name="title_tutorial">Tutorial</string>
    <string name="language">Choose language</string>
    <string name="english">English</string>
    <string name="russian">Русский</string>
    <string name="chinese">中国的</string>
    <string name="guest">Guest</string>
    <string name="locale">Locales</string>
    <string name="graphShow">Graph can be displayed for at least 7 records</string>
    <string name="graphWeek">week</string>
    <string name="graphMonth">month</string>
    <string name="graph3Month">3 months</string>
    <string name="graphAllPeriod">all period</string>
    <string name="not_enough_records">Not enough records</string>
    <string name="receiver">Receiver</string>
    <string name="pressure_stat">Pressure statistics</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="service">Service</string>
    <string name="settings">Settings</string>
    <string name="date">Date</string>
    <string name="pressure">Pressure</string>
    <string name="mmhg">mmhg</string>
    <string name="bitpersec">b/m</string>
    <string name="sys">Sys</string>
    <string name="dias">Dias</string>
    <string name="no_stat_records">You have no records</string>
    <string name="show_graph_after_rotation">Show graph after rotation </string>
    <string name="show_notifications">Show notifications</string>
    <string name="your_notification">Your notification</string>
    <string name="edit_notification">Edit notification</string>
    <string name="your_name">Your name</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="mail_sanding">mail sanding...</string>
    <string name="statictics">Statictics</string>
    <string name="cannt_save">Sorry, but I can\'t save or sand statistics, because SD-card is no available</string>
    <string name="e_mail">e-mail</string>
    <string name="doctor_e_mail">Doctor\'s e-mail</string>
    <string name="sharedPrefLoadState">state</string>
    <string name="contact_us">Contact us!</string>
    <string name="programm_description">© 2014 by Ser and moggot.\n
										All rights reserved.\n
										\n
										With this programm you will be able
										to control your blood pressure.\n
										\n
										Capabilities:\n
										-record pressure and pulse to the diary\n
										-plot assay\n
										-costomize notifications\n
										-adding multiple users\n
										-sending results of measuring to your attending doctor
										-saving result of measuring in file
										\n
										According to the law of patient confidentiality
										data of your blood pressure and pulse are saved
										only in the application database.\n
										\n
										Developers don\'t responsible for the loss of
										user personal data.\n
										\n</string>
    <string name="admob_publisher_id_main" translatable="false">ca-app-pub-4895351525471764/2445965539</string>
    <string name="admob_publisher_id_statistic" translatable="false">ca-app-pub-4895351525471764/9585625930</string>

</resources>