<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/btnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/pointer"
        android:drawableStart="@drawable/user_icon1"
        android:textSize="25dp" />

     <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:orientation="horizontal"
        android:background = "#8B0000" >

         <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="22dp"
             android:text="@string/date"/>

         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/textView1"
             android:layout_alignBottom="@+id/textView1"
             android:layout_centerHorizontal="true"
             android:text="@string/pressure" />

         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/textView2"
             android:layout_alignBottom="@+id/textView2"
             android:layout_alignParentRight="true"
             android:layout_marginRight="33dp"
             android:text="@string/pulse" />

    </RelativeLayout>

    <ListView
        android:id="@+id/listStat"
        android:layout_width="wrap_content"
        android:layout_height="246dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.53"
        android:divider="#8B0000"
        android:dividerHeight="@dimen/twodp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/btnAddStat"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:src="@drawable/heartbeat_button" />

    </RelativeLayout>

</LinearLayout>